# Habbit-Tracker

./: env_example  pyproject.toml
config/: settings.py  urls.py
habbits/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_0b651bb283a03a32_0001_initial_py.html  z_0b651bb283a03a32_0002_alter_habbit_duration_seconds_and_more_py.html  z_0b651bb283a03a32_0003_alter_habbit_options_py.html  z_0b651bb283a03a32___init___py.html  z_153f29971b0e8b80___init___py.html  z_153f29971b0e8b80_admin_py.html  z_153f29971b0e8b80_apps_py.html  z_153f29971b0e8b80_models_py.html  z_153f29971b0e8b80_paginators_py.html  z_153f29971b0e8b80_serializers_py.html  z_153f29971b0e8b80_services_py.html  z_153f29971b0e8b80_tasks_py.html  z_153f29971b0e8b80_tests_py.html  z_153f29971b0e8b80_urls_py.html  z_153f29971b0e8b80_views_py.html  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_asgi_py.html  z_1ea838694151cac8_celery_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_1ea838694151cac8_wsgi_py.html  z_f6c68bdc9becfc1e___init___py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_permissions_py.html  z_f6c68bdc9becfc1e_serializers_py.html  z_f6c68bdc9becfc1e_tests_py.html  z_f6c68bdc9becfc1e_urls_py.html  z_f6c68bdc9becfc1e_views_py.html  z_fff39e3ca0aaeed4_0001_initial_py.html  z_fff39e3ca0aaeed4_0002_alter_user_telegram_id_py.html  (+1 more)
users/: models.py  tests.py  (+3 more)
(+5 files in other folders)
