[tool.poetry]
name = "habbit-tracker"
version = "0.1.0"
description = ""
authors = ["Said Magomedov <saidmagomedov037@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.3.0"
django = "^5.2.4"
djangorestframework = "^3.16.0"
redis = "^6.2.0"
djangorestframework-simplejwt = "^5.5.1"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
